--- a/manifests/emissary/emissary-crds.yaml.in
+++ b/manifests/emissary/emissary-crds.yaml.in
@@ -3756,6 +3756,8 @@ spec:
                 type: array
               v3CustomTags:
                 items:
+                  description: TracingCustomTag provides a data structure for capturing
+                    envoy's `type.tracing.v3.CustomTag`
                   properties:
                     environment:
                       description: Environment explicitly specifies the protocol stack
@@ -3870,6 +3872,8 @@ spec:
                 type: object
               custom_tags:
                 items:
+                  description: TracingCustomTag provides a data structure for capturing
+                    envoy's `type.tracing.v3.CustomTag`
                   properties:
                     environment:
                       description: Environment explicitly specifies the protocol stack
